# christmas_countdown

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: app.py  gui.ui  ui_form.py
